//指定protobuf语法版本
syntax = "proto3";

//包名
option java_package = "com.ghj.protocol";
//源文件类名
option java_outer_classname = "MessageProto";

message Message {

    int64 id = 1;

    string loginName = 2;

    string nickName = 3;
    //int32 对应java中的int
    int32 fromUserId = 4;
    //optional 可以为空
    int32 toUserId = 5;

    int32 toGroupId = 6;

    int32 messageTypeId = 7;

    string content = 8;

    string token = 9;

    MessageBehavior messageBehavior = 10;

    MessageDirect messageDirect = 11;

    int64 deviceId = 12;

    int32 associatedGroupId = 13;

    //消息路由到具体某一台服务器应该是路由算法决定的
    int64 machineSerialNumber = 14;

    string ip = 15;

    string port = 16;

    repeated int32 toUserIds = 17;

    int64 matchMessageId = 18;

    repeated int64 matchMessageIds = 19;


    enum MessageBehavior {
        LOGIN = 0;
        PING = 1;
        MESSAGE = 2;
        LOGIN_OUT = 3;
        REGISTRY_ACK = 4;
        NOTIFY = 5;
    }

    enum MessageDirect {
        PERSONAL = 0;
        GROUP = 1;
        SERVER = 2;
    }
}


//message Message {
//
//    message AckMessage {
//
//        int64 id = 1;
//
//        int32 code = 2;
//
//        string content = 3;
//
//        int64 matchMessageId = 4;
//
//        int32 toUserId = 5;
//
//        int32 fromUserId = 6;
//
//        int32 associatedGroupId = 7;
//
//        MessageDirect messageDirect = 8;
//
//        int64 machineSerialNumber = 9;
//
//        enum MessageDirect {
//            PERSONAL = 0;
//            GROUP = 1;
//            SERVER = 2;
//        }
//
//    }
//
//    message NotifyMessage {
//
//        int64 id = 1;
//
//        int32 code = 2;
//
//        string content = 3;
//
//        repeated int64 matchMessageIds = 4;
//
//        repeated int32 toUserIds = 5;
//
//        int32 machineSerialNumber = 6;
//    }
//
//    message RegisterMessage {
//
//        string ip = 1;
//
//        int64 machineSerialNumber = 2;
//
//        int32 port = 3;
//
//        enum ClientBehavior {
//            REGISTER = 0;
//        }
//
//        enum MessageDirect {
//            REGISTRY = 0;
//        }
//    }
//
//    message RequestMessage {
//
//        int64 id = 1;
//
//        string loginName = 2;
//
//        string nickName = 3;
//        //int32 对应java中的int
//        int32 fromUserId = 4;
//        //optional 可以为空
//        int32 toUserId = 5;
//
//        int32 toGroupId = 6;
//
//        int32 messageTypeId = 7;
//
//        string content = 8;
//
//        string token = 9;
//
//        ClientBehavior clientBehavior = 10;
//
//        MessageDirect messageDirect = 11;
//
//        int64 deviceId = 12;
//
//        int32 associatedGroupId = 13;
//
//        //消息路由到具体某一台服务器应该是路由算法决定的
//        int64 machineSerialNumber = 14;
//
//        enum ClientBehavior {
//            LOGIN = 0;
//            PING = 1;
//            MESSAGE = 2;
//            LOGIN_OUT = 3;
//            REGISTRY_ACK = 4;
//        }
//
//        enum MessageDirect {
//            PERSONAL = 0;
//            GROUP = 1;
//            SERVER = 2;
//        }
//
//
//    }
//}